# whisper-az

./: .gitignore  README.md  paper.md  pyproject.toml
results/: benchmark.json  error_analysis.csv  error_summary.txt  train_lora_history.txt
results/transcripts/: mms-1b-all-azj-script_latin_common_voice_test.json  mms-1b-all-azj-script_latin_fleurs_test.json  whisper-base_common_voice_test.json  whisper-base_fleurs_test.json  whisper-large-v3_common_voice_test.json  whisper-large-v3_fleurs_test.json  whisper-medium_common_voice_test.json  whisper-medium_fleurs_test.json  whisper-small-az-lora_common_voice_test.json  whisper-small-az-lora_fleurs_test.json  whisper-small_common_voice_test.json  whisper-small_fleurs_test.json  whisper-tiny_common_voice_test.json  whisper-tiny_fleurs_test.json
src/: analyze_errors.py  auto_label_errors.py  benchmark.py  data.py  eval_mms.py  push_to_hub.py  train_lora.py
